--- a/css/style.css
+++ b/css/style.css
@@ -34,21 +34,22 @@
     position: absolute;
     bottom: 0;
 
-    padding: 30px;
+    padding-right: 20px;
+    padding-bottom: 40px;
     
     width: 100%;
 
     color: white;
     text-align: right;
 
-    text-shadow: 2px 2px black;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.177);
 }
 
-#thumb {
+/* #thumb {
     width: 250px;
 
     background-color: blueviolet;
-}
+} */
 
 #up, #down {
     position: absolute;
